--- a/Tu_Jardin_App/Client/Pages/Cuenta/Perfil.razor
+++ b/Tu_Jardin_App/Client/Pages/Cuenta/Perfil.razor
@@ -53,7 +53,7 @@ else
 
                                     <div class="content_info">
                                         <label>Logros</label>
-                                        <a href="/logros" class="btn btn-outline-success">@user.Points</a>
+                                        <a href="/logros" class="btn btn-outline-success">@user.Points XP</a>
                                     </div>
                                 </div>
 
